@@ -32,9 +32,32 @@ The options available are:
 In the case of the `memcached` type, this attribute is required and it's used to store the lock files.
 * cache_key - the "key" used to uniquely identify this content in the cache.  the total namespace of keys within the cache is local to the current template, and the default value of "key" is the name of the def which is storing its data.  It is an evaluable tag, so you can put a Python expression to calculate the value of the key on the fly.  For example, heres a page that caches any page which inherits from it, based on the filename of the calling template:
     
-        <%page cached="True" cache_key="${self.filename}"/>
+    <%page cached="True" cache_key="${self.filename}"/>
     
-        ${next.body()}
+    ${next.body()}
         
-        ## rest of template
+    ## rest of template
     
+### Accessing the Cache {@name=accessing}
+
+The `Template`, as well as any template-derived namespace, has an accessor called `cache` which returns the `Cache` object for that template.   This object is a facade on top of the Beaker internal cache object, and provides some very rudimental capabilities, such as the ability to get and put arbitrary values:
+
+    <%
+        local.cache.put("somekey", type="memory", "somevalue")
+    %>
+    
+Above, the cache associated with the `local` namespace is accessed and a key is placed within a memory cache.
+
+More commonly the `cache` object is used to invalidate cached sections programmatically:
+
+    {python}
+    template = lookup.get_template('/sometemplate.html')
+    
+    # invalidate the "body" of the template
+    template.cache.invalidate_body()
+    
+    # invalidate an individual def
+    template.cache.invalidate_def('somedef')
+    
+    # invalidate an arbitrary key
+    template.cache.invalidate('somekey')
